--- a/main.html
+++ b/main.html
@@ -11,6 +11,41 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<form id="my-form" method="post">
+		<label for="name">Name</label>
+		<input type="text" required id="name"><br><br>
+
+			<label for="email">Email</label>
+		<input type="email" required id="email"><br><br>
+
+
+				<label for="gender">Gender</label>
+		<label for="male">Male</label>
+		<input type="radio" required name="gender" id="male">
+		<label for="female">Female</label>
+		
+		<input type="radio" required name="gender"  id="female"><br><br>
+        	<label for="cars">Car Brands</label>
+		<select name="cars" id="cars">
+
+			<option value="select">Select</option>
+			<option value="bmw">BMW</option>
+			<option value="audi">Audi</option>
+			<option value="mercedez">Mercedez</option>
+			
+		</select><br><br>
+
+	  	<label for="age">Car Age</label>
+		<input type="age" id="age"><br><br>
+
+		  	<label for="dop">Date of Purchase</label>
+		<input type="date" id="dop"><br><br>
+
+		  	<label for="password">Password</label>
+		<input type="password" id="password"><br><br>
+		<button type="submit">Submit</button>
+	</form>
+
 </body>
 
 </html>
