--- a/main.html
+++ b/main.html
@@ -36,13 +36,13 @@
 		</select><br><br>
 
 	  	<label for="age">Car Age</label>
-		<input type="age" id="age"><br><br>
+		<input type="age" id="carage" required><br><br>
 
 		  	<label for="dop">Date of Purchase</label>
-		<input type="date" id="dop"><br><br>
+		<input type="date" id="dop" required><br><br>
 
 		  	<label for="password">Password</label>
-		<input type="password" id="password"><br><br>
+		<input type="password" id="password" required ><br><br>
 		<button type="submit">Submit</button>
 	</form>
 
