--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 			
 		</select><br><br>
 
-	  	<label for="age">Car Age</label>
+	  	<label for="carage">Car Age</label>
 		<input type="age" id="carage" required><br><br>
 
 		  	<label for="dop">Date of Purchase</label>
