--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 		</select><br><br>
 
 	  	<label for="carage">Car Age</label>
-		<input type="age" id="carage" required><br><br>
+		<input type="carage" id="carage" required><br><br>
 
 		  	<label for="dop">Date of Purchase</label>
 		<input type="date" id="dop" required><br><br>
